app/components/app/addons/addons.scss
.app-modal {
  visibility: hidden;
  opacity: 0;
  transition: all 0.2s ease;

  .modal-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid var(--border-base);
    padding: 8px;

    .modal-title {
      font-size: 16px;
      font-weight: 600;
    }

    i {
      font-size: 20px;
      color: var(--white);
      cursor: pointer;
    }

    .fa-chevron-left {
      &:hover {
        color: var(--text-base);
      }
    }

    .fa-chevron-left {
      left: 16px;
    }

    .modal-function-container {
      width: 24px;
      height: 24px;
      border-radius: 4px;
      cursor: pointer;

      i {
        color: var(--text-base);
      }

      &:hover {
        background: rgba(0, 0, 0, 0.08);
      }
    }
  }

  .modal-fixed-container {
    position: fixed;
    z-index: 2;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }

  .modal-backdrop {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
    background: rgba(0, 0, 0, 0.32);
  }

  .modal-base-style {
    width: 480px;
    max-width: calc(100vw - 32px);
    background: var(--background-base);
    border: 1px solid var(--border-base);
    border-radius: 4px;
    position: absolute;
    max-height: calc(100svh - 120px);
    overflow: auto;

    @media (max-width: 767px) {
      max-height: calc(100svh - 120px);
    }

    &.scrollable-body {
      display: flex;
      flex-direction: column;

      .modal-header {
        flex: 0 0 auto;
      }

      .modal-header + * {
        flex: 1 1 auto;
        overflow-y: auto;
      }
    }
  }

  &.opened {
    visibility: visible;
    opacity: 1;
  }

  .bottom-buttons {
    padding: 16px;
    display: flex;
    justify-content: flex-end;
    gap: 16px;

    button {
      padding: 8px 24px;
    }
  }
}

.app-toasts {
  position: fixed;
  z-index: 2;
  left: 50%;
  top: 16px;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  gap: 8px;

  .app-toast {
    min-width: 280px;
    width: 480px;
    max-width: calc(100vw - 32px);
    padding: 16px;
    border-radius: 4px;
    color: var(--white);
    display: flex;
    opacity: 0;
    transform: translateY(-40px);
    transition: all 0.2s ease;

    &.show {
      opacity: 1;
      transform: translateY(0);
    }

    .html {
      flex: 1;
      white-space: pre-line;
    }

    .button-close {
      width: 24px;
      height: 24px;
      border-radius: 4px;
      font-size: 16px;
      display: flex;
      align-items: center;
      justify-content: center;
      cursor: pointer;

      &:hover {
        background: rgba(0, 0, 0, 0.08);
      }
    }

    &.success {
      background: var(--success);
    }

    &.warning {
      background: var(--warning);
    }

    &.error {
      background: var(--danger);
    }
  }
}

.go-to-top {
  width: 40px;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(0, 0, 0, 0.5);
  color: var(--white);
  border-radius: 50%;
  bottom: var(--app-default-page-padding);
  right: var(--app-default-page-padding);
  transition: all 0.5s ease;
  position: fixed;
  z-index: 1;
  cursor: pointer;

  &.no-show {
    opacity: 0;
    transform: scale(0);
    pointer-events: none;
  }

  i {
    font-size: 20px;
  }

  @media (min-width: 1200px) {
    right: calc(50% - var(--app-max-width) / 2 + var(--app-default-page-padding));
  }
}

.app-tooltip {
  --tooltip-bg: rgba(0, 0, 0, 0.9);
  color: var(--white);
  background: var(--tooltip-bg);
  position: fixed;
  border-radius: 4px;
  padding: 8px 12px;
  width: 240px;
  max-width: 100%;
  font-size: 12px;
  line-height: 18px;
  pointer-events: auto;
  z-index: 2;
  box-shadow: 2px 4px 8px rgba(0, 0, 0, .5);

  &.fit {
    width: fit-content
  }

  --triangle-size: 8px;
  .triangle {
    width: 0;
    height: 0;
    border-left: var(--triangle-size) solid transparent;
    border-right: var(--triangle-size) solid transparent;
    border-top: var(--triangle-size) solid var(--tooltip-bg);
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: calc(-1 * var(--triangle-size));
  }

  .fa-times {
    position: absolute;
    top: 8px;
    right: 12px;
    font-size: 16px;
    cursor: pointer;
  }

  .tooltip-body {
    white-space: pre-line;

    .link {
      color: var(--primary);
      cursor: pointer;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &.below {
    .triangle {
      top: calc(-1 * var(--triangle-size));
      bottom: 0;
      transform: rotate(180deg) translateX(50%) !important;
    }
  }
}

.global-loading {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.64);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 24px;
  z-index: 2;

  .text-loading {
    font-size: 28px;
    letter-spacing: 4px;
    font-weight: 600;
    color: var(--white);
    font-family: Poppins;
    animation: text-grad 2s linear infinite;
  }

  @keyframes text-grad {
    0% {
      color: var(--white);
    }
    50% {
      color: var(--black);
    }
    100% {
      color: var(--white);
    }
  }
}

